<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColorPrimary"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:contentInsetStart="0dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="start"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:paddingTop="10sp"
        android:textStyle="normal" />
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            style="@style/MainButtonStyle"
            android:text="@string/search"
            app:icon="@drawable/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Space
            android:layout_height="@dimen/mpbutton_space_height"
            android:layout_width="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/library_button"
            style="@style/MainButtonStyle"
            android:text="@string/library"
            app:icon="@drawable/lib"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Space
            android:layout_height="@dimen/mpbutton_space_height"
            android:layout_width="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button"
            style="@style/MainButtonStyle"
            android:text="@string/settings"
            app:icon="@drawable/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>