<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColorSecondary"
    android:orientation="vertical"
    tools:context="com.example.android.playlistmaker.SearchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_marginTop="16dp"
        android:id="@+id/toolbar"
        style="@style/CustomToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="?attr/textColorPrimary"
        app:title="@string/search"
        app:titleTextAppearance="@style/ToolbarTextAppearance" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:paddingHorizontal="16dp">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_bar_background"
            android:backgroundTint="?attr/searchBarBackgroundColor"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="8dp"
            android:drawableTint="?attr/searchBarElementColor"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:singleLine="true"
            android:textColor="@color/alternative_black"
            android:textColorHint="?attr/searchBarElementColor"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="16dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:src="@drawable/clear"
            android:visibility="gone"
            app:tint="?attr/searchBarElementColor" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/placeholderMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="100dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholderImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="16dp" />

        <TextView
            android:id="@+id/placeholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/updateButton"
            style="@style/UpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/update" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_history_header"
            style="@style/PlaceholderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/story_tracks"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/tracks_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            tools:itemCount="5"
            tools:listitem="@layout/track_cell" />

        <Button
            android:id="@+id/clearStoryTracksButton"
            style="@style/UpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/clear_story"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="140dp"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>