<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PlayerActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_player"
            style="@style/ToolbarPlayer"
            app:navigationIcon="@drawable/back"
            app:titleTextAppearance="@style/ToolbarTitleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />


        <ImageView
            android:id="@+id/track_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/track_avatar"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_player" />

        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="?attr/textColorSecondary"
            android:textSize="22sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/track_image"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="?attr/textColorSecondary"
            android:textSize="14sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/track_name"
            tools:text="The Beatles" />


        <ImageView
            android:id="@+id/playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/playlist_button"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintEnd_toStartOf="@id/play_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/play_button"
            app:layout_constraintEnd_toStartOf="@id/favourites_button"
            app:layout_constraintStart_toEndOf="@id/playlist_button"
            app:layout_constraintTop_toBottomOf="@+id/artist_name" />

        <ImageView
            android:id="@+id/favourites_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/favorites"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/play_button"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <TextView
            android:id="@+id/time_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/placeholder_track_time"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/play_button" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/infoBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="track_duration_tag, collection_tag, release_date_tag, genre_tag, country_tag" />

        <TextView
            android:id="@+id/track_duration"
            style="@style/Track_info_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/song_duration"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTag="track_duration_tag"
            app:layout_constraintTop_toBottomOf="@id/time_play" />

        <TextView
            android:id="@+id/track_duration_value"
            style="@style/Track_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/track_duration"
            tools:text="5:35" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/info_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="collection,collection_value" />

        <TextView
            android:id="@+id/collection"
            style="@style/Track_info_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/collection"
            app:layout_constraintTag="collection_tag"
            app:layout_constraintTop_toBottomOf="@+id/track_duration" />

        <TextView
            android:id="@+id/collection_value"
            style="@style/Track_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/collection"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/release_date"
            style="@style/Track_info_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/releaseDate"
            app:layout_constraintTag="release_date_tag"
            app:layout_constraintTop_toBottomOf="@+id/collection" />

        <TextView
            android:id="@+id/release_date_value"
            style="@style/Track_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/release_date"
            tools:text="1965" />

        <TextView
            android:id="@+id/genre"
            style="@style/Track_info_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genre_name"
            app:layout_constraintTag="genre_tag"
            app:layout_constraintTop_toBottomOf="@id/release_date" />

        <TextView
            android:id="@+id/genre_value"
            style="@style/Track_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/genre"
            tools:text="Rock" />

        <TextView
            android:id="@+id/country"
            style="@style/Track_info_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/country"
            app:layout_constraintTag="country_tag"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <TextView
            android:id="@+id/country_value"
            style="@style/Track_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/country"
            tools:text="Великобритания"
            android:paddingBottom="20dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>