<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.android.playlistmaker.ui.new_playlist.fragment.NewPlaylistFragment"
    style="@style/SettingBackgroundStyle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newPlaylistLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />


    <ImageView
        android:id="@+id/backButtonPlayer"
        android:layout_width="@dimen/size_second"
        android:layout_height="@dimen/size_second"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/back_button__player"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/newPlaylistLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Track_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="start|center"
        android:paddingStart="12dp"
        android:text="@string/new_playlist"
        android:textFontWeight="500"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="@+id/backButtonPlayer"
        app:layout_constraintStart_toEndOf="@+id/backButtonPlayer"
        app:layout_constraintTop_toTopOf="@+id/backButtonPlayer"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coverNewPlaylistLayout"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPlaylistLayout" >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/placeholderNewPlaylist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/cover_new_playlist"
            android:visibility="visible"
            android:clickable="true"    android:focusable="true"    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.RoundedCorners" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameNewPlaylistLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="17dp"
        android:hint="@string/name_new_playlist"
        app:boxStrokeColor="@color/state_box_stroke_color"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/state_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coverNewPlaylistLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameNewPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/text_size_medium"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="?attr/textColorSecondary"
            style="@style/DarkThemeButtonStyle"
            android:textFontWeight="400"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionNewPlaylistLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/description"
        app:boxStrokeColor="@color/state_box_stroke_color"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/state_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameNewPlaylistLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionNewPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/text_size_medium"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="?attr/textColorSecondary"
            style="@style/DarkThemeButtonStyle"
            android:textFontWeight="400"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/createNewPlaylistButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/text_color_hint"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:fontFamily="@font/ys_display_medium"
        android:textAllCaps="false"
        android:textFontWeight="500"
        app:cornerRadius="8dp"
        app:elevation="0dp"
        android:stateListAnimator="@null"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>